Alignment fix

--- a/dashboard/templates/css/devices.css
+++ b/dashboard/templates/css/devices.css
@@ -163,3 +163,12 @@ input::placeholder {
     background-color: #354CBF;
     overflow-x: hidden !important;
 }
+
+#on img {
+    width: 24px;
+    height: 24px;
+    margin: 0.78rem 1.5rem 0 1.5rem;
+}
+#on p {
+    margin: 1px 0 0 0;
+}
